force-app/main/default/objects/Objective_Opportunity_Relationship__c/Objective_Opportunity_Relationship__c.object-meta.xml
<CustomObject>
    <description>Junction object created between Objectives, Plan Objectives and Opportunity objects</description>
    <label>Objective Opportunity Relationship</label>
    <nameField>
        <displayFormat>OOR-{0000}</displayFormat>
        <label>Objective Opportunity Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Objective Opportunity Relationships</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>