force-app/main/default/objects/Objective_Opportunity_Relationship__c/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to Account Plan of the corresponding Account Plan Objective</description>
    <label>Account Plan</label>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipLabel>Opportunity</relationshipLabel>
    <relationshipName>Objective_Opportunity_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>