force-app/main/default/objects/Objective_Opportunity_Relationship__c/fields/Account_Plan_Objective__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Objective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to Account Plan Objective</description>
    <label>Account Plan Objective</label>
    <referenceTo>Objective__c</referenceTo>
    <relationshipLabel>Objective Opportunity Relationships</relationshipLabel>
    <relationshipName>Objective_Opportunity_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>