force-app/main/default/objects/Objective_Opportunity_Relationship__c/fields/Closed_Status__c.field-meta.xml
<CustomField>
    <fullName>Closed_Status__c</fullName>
    <description>Closed Status of the corresponding Account Plan or Plan Objective</description>
    <formula>IF(ISBLANK(Account_Plan_Objective__c), TEXT(Plan_Objective__r.Closed_Status__c), TEXT(Account_Plan_Objective__r.Closed_Status__c))</formula>
    <label>Closed Status</label>
    <type>Text</type>
</CustomField>