force-app/main/default/objects/Objective_Opportunity_Relationship__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Opportunity record  in objective opportunity relationship record</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Territory/Account Plan Objectives</relationshipLabel>
    <relationshipName>Objective_Opportunity_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>