force-app/main/default/objects/Objective_Opportunity_Relationship__c/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <description>Owner of the corresponding associated Opportunity</description>
    <formula>Opportunity__r.Owner.FirstName + &apos; &apos;+ Opportunity__r.Owner.LastName</formula>
    <label>Opportunity Owner</label>
    <type>Text</type>
</CustomField>