force-app/main/default/objects/Objective_Opportunity_Relationship__c/fields/Opportunity_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Type__c</fullName>
    <description>Holds Record Type of the corresponding associated Opportunity</description>
    <formula>Opportunity__r.RecordType.Name</formula>
    <label>Opportunity Record Type</label>
    <type>Text</type>
</CustomField>