force-app/main/default/objects/Objective_Opportunity_Relationship__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <description>Lookup to User record objective opportunity relationship record</description>
    <formula>IF(ISBLANK(Account_Plan_Objective__c), Plan_Objective__r.Plan_Strategy__r.Plan__r.Plan_Owner_Name__c, Account_Plan_Objective__r.Account_Plan__r.Owner_Full_Name__c)</formula>
    <label>Owner</label>
    <type>Text</type>
</CustomField>