force-app/main/default/objects/Objective_Opportunity_Relationship__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to Plan of the corresponding Plan Objective</description>v
    <label>Plan</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Opportunity</relationshipLabel>
    <relationshipName>Objective_Opportunity_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>