force-app/main/default/objects/Objective_Opportunity_Relationship__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <description>Holds Product Type of the corresponding Account Plan or Plan Objective</description>
    <formula>IF(ISBLANK(Account_Plan_Objective__c), TEXT(Plan_Objective__r.Product_Type__c), TEXT(Account_Plan_Objective__r.Product_Type__c))</formula>
    <label>Product Type</label>
    <type>Text</type>
</CustomField>